--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "neo4j-driver": "^1.0.4",
     "path": "^0.12.7",
     "html-webpack-plugin": "^2.10.0",
-    "webpack": "^1.12.14"
+    "webpack": "^1.12.14",
+    "webpack-dev-server": "^1.12.0"
   },
   "devDependencies": {
     "babel-core": "^6.3.26",
@@ -28,7 +29,8 @@
   "scripts": {
     "clean": "rimraf build && rimraf build",
     "build": "webpack-dev-server -p",
-    "start": "webpack -p",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server",
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p"
   }
 }
